module(
    name = "p4c",
    version = "head",  # Fill in concrete versions only on release branches/in the BCR.
)

bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boost.algorithm", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.format", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.functional", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.graph", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.iostreams", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.multi_index", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.multiprecision", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.serialization", version = "1.90.0.bcr.1")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "z3", version = "4.15.2")
bazel_dep(name = "p4runtime", version = "1.5.0")

p4c_repositories = use_extension("//bazel:repositories.bzl", "p4c_repositories")
use_repo(
    p4c_repositories,
    "inja",
)

p4c_ir_extensions = use_extension("//bazel:extensions.bzl", "p4c_ir_extensions")
use_repo(
    p4c_ir_extensions,
    "p4c_ir_extensions",
)

# Used by the `tools/format-bazel-files.sh` script.
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
